Fixed isReleased Logic