@@ -10,7 +10,6 @@ import ug.edu.game.rest.repository.GameShopRepository;
 
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -33,7 +32,7 @@ public class DataBaseInitializer {
 
     @Transactional
     public void initializeDatabase() {
-        gameFranchiseRepository.saveAll(Arrays.asList(
+        gameFranchiseRepository.saveAll(List.of(
                 new GameFranchise("Souls Series", "FromSoftware", 75000000f),
                 new GameFranchise("Monster Hunter", "Capcom", 27000000f),
                 new GameFranchise("Final Fantasy", "Square Enix", 200000000f),
@@ -44,29 +43,30 @@ public class DataBaseInitializer {
                 new GameFranchise("Animal Crossing", "Nintendo", 100000000f),
                 new GameFranchise("Overwatch", "Blizzard Entertainment", 50000000f)
         ));
-        gameShopRepository.saveAll(Arrays.asList(
+        gameShopRepository.saveAll(List.of(
                 new GameShop("GameHub", "Przykładów, Przykładówny 6", "+1234567890", LocalTime.of(9, 0), LocalTime.of(21, 0), LocalDate.of(2010, 5, 20)),
                 new GameShop("Virtual Paradise", "Gdańsk, WitkaStwosza 210", "+9876543210", LocalTime.of(10, 0), LocalTime.of(22, 0), LocalDate.of(2015, 8, 15)),
                 new GameShop("Retro Realm", "Sopot, Recenzyjna 1", "+1122334455", LocalTime.of(8, 30), LocalTime.of(20, 30), LocalDate.of(2005, 11, 10)),
                 new GameShop("Virtual Vault", "Gdynia, Kościuszki 55", "+9988776655", LocalTime.of(11, 0), LocalTime.of(23, 0), LocalDate.of(2020, 1, 1)),
                 new GameShop("Game Vault", "Gdańsk, Kościuszki 66", "+2233445566", LocalTime.of(9, 30), LocalTime.of(21, 30), LocalDate.of(2000, 4, 5))
         ));
-        gameRepository.saveAll(Arrays.asList(
-                new Game("Bloodborne", "Souls-like", LocalDate.of(2015, 10, 11), 10000000),
-                new Game("Monster Hunter World", "RPG", LocalDate.of(2018, 2, 15), 15000000),
-                new Game("Final Fantasy XVI", "RPG", LocalDate.of(2023, 6, 3), 3000000),
-                new Game("Wiedźmin 3: Dziki Gon", "RPG", LocalDate.of(2015, 5, 19), 50000000),
-                new Game("Wiedźmin 2: Zabójca Królów", "RPG", LocalDate.of(2011, 5, 17), 2000000),
-                new Game("Devil May Cry 5", "Character-Action", LocalDate.of(2019, 3, 8), 6000000),
-                new Game("Devil May Cry 4", "Character-Action", LocalDate.of(2008, 1, 31), 3000000),
-                new Game("Dark Souls III", "Souls-like", LocalDate.of(2016, 4, 12), 10000000),
-                new Game("Dark Souls II", "Souls-like", LocalDate.of(2014, 3, 11), 2500000),
-                new Game("Final Fantasy XV", "RPG", LocalDate.of(2016, 11, 29), 10000000),
-                new Game("Rocket League", "Sports", LocalDate.of(2015, 7, 7), 10000000),
-                new Game("Stardew Valley", "Simulation", LocalDate.of(2016, 2, 26), 20000000),
-                new Game("Animal Crossing: New Horizons", "Simulation", LocalDate.of(2020, 3, 20), 42000000),
-                new Game("Overwatch", "Shooter", LocalDate.of(2016, 5, 24), 50000000)
+        gameRepository.saveAll(List.of(
+                new Game("Bloodborne", "Souls-like", 10000000, LocalDate.of(2015, 10, 11)),
+                new Game("Monster Hunter World", "RPG", 15000000, LocalDate.of(2018, 2, 15)),
+                new Game("Final Fantasy XVI", "RPG", 3000000, LocalDate.of(2023, 6, 3)),
+                new Game("Wiedźmin 3: Dziki Gon", "RPG", 50000000, LocalDate.of(2015, 5, 19)),
+                new Game("Wiedźmin 2: Zabójca Królów", "RPG", 2000000, LocalDate.of(2011, 5, 17)),
+                new Game("Devil May Cry 5", "Character-Action", 6000000, LocalDate.of(2019, 3, 8)),
+                new Game("Devil May Cry 4", "Character-Action", 3000000, LocalDate.of(2008, 1, 31)),
+                new Game("Dark Souls III", "Souls-like", 10000000, LocalDate.of(2016, 4, 12)),
+                new Game("Dark Souls II", "Souls-like", 2500000, LocalDate.of(2014, 3, 11)),
+                new Game("Final Fantasy XV", "RPG", 10000000, LocalDate.of(2016, 11, 29)),
+                new Game("Rocket League", "Sports", 10000000, LocalDate.of(2015, 7, 7)),
+                new Game("Stardew Valley", "Simulation", 20000000, LocalDate.of(2016, 2, 26)),
+                new Game("Animal Crossing: New Horizons", "Simulation", 42000000, LocalDate.of(2020, 3, 20)),
+                new Game("Overwatch", "Shooter", 50000000, LocalDate.of(2016, 5, 24))
         ));
+
         for (Game game : gameRepository.findAll()) {
             switch (game.getTitle()) {
                 case "Bloodborne":
